package pragmatech.digital.workshops.lab2.entity;

/**
 * Represents the current status of a book in the library.
 */
public enum BookStatus {
    AVAILABLE,
    BORROWED,
    RESERVED,
    LOST,
    UNDER_REPAIR
}